# daspro-learning-app

./: .gitignore  README.md  pyproject.toml
src/: justonce.py  main.py  test.py
src/modules/calculator/: calculator.py
src/modules/data_types/: data_types.py
src/modules/geometry/: geometry.py
src/modules/volumes/: volumes.py
src/scripts/: clean_cache.py
src/utils/: ui.py
