[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "learning-python"
version = "0.1.0"
description = "Simple CLI app for learning Python basics"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Ahmad Hasan Maki" }]
dependencies = ["rich>=13.0.0"]

[project.scripts]
learning-python = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
python = "3.8"
