[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "learning-python"
version = "0.1.0"
description = "Simple CLI app for learning Python basics"
readme = "README.md"
authors = [{ name = "Ahmad Hasan Maki" }]
requires-python = ">=3.12"
dependencies = ["rich>=13.0.0"]

[project.scripts]
learning-python = "src.main:main"
clean-cache = "src.scripts.clean_cache:clean_cache"

[tool.hatch.build.targets.wheel]
packages = ["src"]
